# docs/swagger.json
@@ -29,7 +29,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dtos.User"
+                            "$ref": "#/definitions/dtos.CreateUserRequest"
                         }
                     }
                 ],
@@ -42,6 +42,12 @@
                     },
                     "400": {
                         "description": "Erro de validação",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.APIError"
+                        }
+                    },
+                    "409": {
+                        "description": "Usuário já cadastrado",
                         "schema": {
                             "$ref": "#/definitions/dtos.APIError"
                         }
@@ -59,15 +65,7 @@
                 }
             }
         },
-        "dtos.Message": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "dtos.User": {
+        "dtos.CreateUserRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -80,6 +78,14 @@
                 "password": {
                     "type": "string",
                     "minLength": 6
+                }
+            }
+        },
+        "dtos.Message": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         }
