# src/controllers/user.go
@@ -1,11 +1,12 @@
 package controllers
 
 import (
+	"context"
 	"go-api/src/dtos"
-	"go-api/src/repositories"
 	"go-api/src/services"
 	"go-api/src/utils"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,14 +15,12 @@ type UserController struct {
 	service *services.UserService
 }
 
-func NewUserController(server *gin.Engine, repository *repositories.UserRepository) {
-	service := services.NewUserService(repository)
+func NewUserController(server *gin.Engine, service *services.UserService) {
 	controller := &UserController{service: service}
 
 	routes := server.Group("/users")
 	{
 		routes.POST("", controller.CreateUser)
-
 	}
 }
 
@@ -31,25 +30,24 @@ func NewUserController(server *gin.Engine, repository *repositories.UserReposito
 // @Description Registra um novo usuário na API
 // @Accept json
 // @Produce json
-// @Param user body dtos.User true "Dados do usuário"
+// @Param user body dtos.CreateUserRequest true "Dados do usuário"
 // @Success 201 {object} dtos.Message "Usuário criado"
-// @Failure 400 {object} dtos.APIError "Erro de validação
-func (controller *UserController) CreateUser(ginContext *gin.Context) {
-	var userDto dtos.User
-
-	err := utils.ValidateRequestBody(ginContext, &userDto)
-	if err != nil {
-		ginContext.Error(err)
+// @Failure 400 {object} dtos.APIError "Erro de validação"
+// @Failure 409 {object} dtos.APIError "Usuário já cadastrado"
+func (c *UserController) CreateUser(ginCtx *gin.Context) {
+	var req dtos.CreateUserRequest
+	if err := utils.ValidateRequestBody(ginCtx, &req); err != nil {
+		ginCtx.Error(err)
 		return
 	}
 
-	err = controller.service.CreateUser(userDto.Email, userDto.Password)
-	if err != nil {
-		ginContext.Error(err)
+	ctx, cancel := context.WithTimeout(ginCtx.Request.Context(), 5*time.Second)
+	defer cancel()
+
+	if err := c.service.RegisterUser(ctx, req.Email, req.Password); err != nil {
+		ginCtx.Error(err)
 		return
 	}
 
-	ginContext.JSON(http.StatusCreated, dtos.Message{
-		Message: "Usuário criado com sucesso.",
-	})
+	ginCtx.JSON(http.StatusCreated, dtos.Message{Message: "Usuário criado com sucesso."})
 }
